adk-agent-with-sidecar-pod-certs-transparent-traffic-route/deployment.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: adk-agent-sa
  namespace: agent-spiffe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adk-agent
  namespace: agent-spiffe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adk-agent
  template:
    metadata:
      labels:
        app: adk-agent
    spec:
      serviceAccountName: adk-agent-sa
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "server1-svc.mcp-server-calculator-system.svc.cluster.local" # Now the app calls this and hits the Envoy sidecar
            - "mcp.deepwiki.com" # Now the app calls this and hits the Envoy sidecar
      containers:
        - name: adk-agent
          imagePullPolicy: Always
          image: docker.io/hmeng/agent:v31
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "128Mi"
            requests:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "128Mi"
          ports:
            - containerPort: 8080
              name: adk-agent
          env:
            - name: PORT
              value: "8080"
            - name: GOOGLE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: google-secret
                  key: google-api-key
          volumeMounts:
            - mountPath: /run/agent-identity-mtls
              name: agent-identity-mtls
              readOnly: true
        - name: envoy
          image: envoyproxy/envoy:v1.36-latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1337
          command: ["/usr/local/bin/envoy"]
          args:
            [
              "-c",
              "/etc/envoy/envoy.yaml",
              "-l",
              "trace",
              "--log-path",
              "/dev/stderr",
            ]
          ports:
            - name: envoy
              containerPort: 80
            - name: mcp-9000
              containerPort: 9000
            - name: mcp-443
              containerPort: 443
          volumeMounts:
            - name: envoy-config-volume
              mountPath: /etc/envoy/envoy.yaml
              subPath: agent_sidecar_spiffe.yaml
            - mountPath: /run/agent-identity-mtls
              name: agent-identity-mtls
              readOnly: true
            - name: spiffe-identity-config
              mountPath: /etc/envoy/sds/spiffe_identity.yaml
              subPath: spiffe_identity.yaml
              readOnly: true
            - name: spiffe-trust-config
              mountPath: /etc/envoy/sds/spiffe_trust.yaml
              subPath: spiffe_trust.yaml
              readOnly: true
      volumes:
        - name: envoy-config-volume
          configMap:
            name: envoy-config
        - name: agent-identity-mtls
          projected:
            sources:
              - clusterTrustBundle:
                  signerName: kube-agentic-networking.sigs.k8s.io/identity
                  labelSelector:
                    matchLabels:
                      "kube-agentic-networking.sigs.k8s.io/canarying": "live"
                      "kube-agentic-networking.sigs.k8s.io/workload-trust-domain": "cluster.local"
                      "kube-agentic-networking.sigs.k8s.io/peer-trust-domain": "cluster.local"
                  path: cluster.local.trust-bundle.pem
              - podCertificate:
                  signerName: kube-agentic-networking.sigs.k8s.io/identity
                  keyType: ECDSAP256
                  credentialBundlePath: cred-bundle.pem
                  # keyPath: tls.key
                  # certificateChainPath: tls.crt
        - name: spiffe-identity-config
          configMap:
            name: spiffe-identity-config
        - name: spiffe-trust-config
          configMap:
            name: spiffe-trust-config
---
apiVersion: v1
kind: Service
metadata:
  name: adk-agent-svc
  namespace: agent-spiffe
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: adk-agent
    - port: 9000
      targetPort: 9000
      name: mcp-local
    - port: 10001
      targetPort: 10001
      name: envoy
  selector:
    app: adk-agent
